<resources>
    <string name="app_name">MadsCalculator</string>
    <string name="history_item_format">%s=%s</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>

    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_multiplication">*</string>
    <string name="operator_division">/</string>
    <string name="operator_equals">=</string>

    <string name="clear_text">C</string>
</resources>