<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/calculator_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="none"
            android:maxLines="3"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/calculator_smart_answer"
            tools:text="1234" />

        <TextView
            android:id="@+id/calculator_smart_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculator_display"
            app:layout_constraintBottom_toTopOf="@id/digit_keyboard_barrier"
            tools:text="1234" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/digit_keyboard_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/digit_keyboard_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="digit_7,digit_9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_1_separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_2_separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_3_separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <TextView
            android:id="@+id/digit_0"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_0"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/row_1_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/operator_clear"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/clear_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/row_2_separator"
            app:layout_constraintStart_toStartOf="@id/row_1_separator"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/operator_equals"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/operator_equals"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/row_3_separator"
            app:layout_constraintStart_toStartOf="@id/row_2_separator" />

        <TextView
            android:id="@+id/operator_plus"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:text="@string/operator_plus"
            android:textAlignment="center"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/row_3_separator" />

        <TextView
            android:id="@+id/digit_1"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_1"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_0"
            app:layout_constraintEnd_toStartOf="@id/row_1_separator"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/digit_2"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_2"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/operator_clear"
            app:layout_constraintEnd_toStartOf="@id/row_2_separator"
            app:layout_constraintStart_toStartOf="@id/row_1_separator" />
        
        <TextView
            android:id="@+id/digit_3"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_3"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/operator_equals"
            app:layout_constraintEnd_toEndOf="@id/row_3_separator"
            app:layout_constraintStart_toStartOf="@id/row_2_separator" />

        <TextView
            android:id="@+id/operator_minus"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/operator_minus"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/operator_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/row_3_separator" />

        <TextView
            android:id="@+id/digit_4"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_4"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_1"
            app:layout_constraintEnd_toStartOf="@id/row_1_separator"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/digit_5"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_5"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_2"
            app:layout_constraintEnd_toStartOf="@id/row_2_separator"
            app:layout_constraintStart_toStartOf="@id/row_1_separator" />

        <TextView
            android:id="@+id/digit_6"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_6"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_3"
            app:layout_constraintEnd_toEndOf="@id/row_3_separator"
            app:layout_constraintStart_toStartOf="@id/row_2_separator" />

        <TextView
            android:id="@+id/operator_multiplication"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/operator_multiplication"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/operator_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/row_3_separator" />


        <TextView
            android:id="@+id/digit_7"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_7"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_4"
            app:layout_constraintEnd_toStartOf="@id/row_1_separator"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/digit_8"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_8"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_5"
            app:layout_constraintEnd_toStartOf="@id/row_2_separator"
            app:layout_constraintStart_toStartOf="@id/row_1_separator" />

        <TextView
            android:id="@+id/digit_9"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/digit_9"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/digit_6"
            app:layout_constraintEnd_toEndOf="@id/row_3_separator"
            app:layout_constraintStart_toStartOf="@id/row_2_separator" />

        <TextView
            android:id="@+id/operator_division"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/operator_division"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/operator_multiplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/row_3_separator" />

        <ImageButton
            android:id="@+id/back_space"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_input_delete"
            android:tint="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@id/operator_division"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/row_3_separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>